@@ -2247,6 +2247,37 @@ efficient).
 @end defun
 
 @c copied from lispref/display.texi
+@defmac with-delayed-message (timeout message) body@dots{}
+Sometimes it's unclear whether an operation will take a long time to
+execute or not, or it can be inconvenient to implement a progress
+reporter.  This macro can be used in those situations.
+
+@lisp
+(with-delayed-message (2 (format "Gathering data for %s" entry))
+  (setq data (gather-data entry)))
+@end lisp
+
+In this example, if the body takes more than two seconds to execute,
+the message will be displayed.  If it takes a shorter time than that,
+the message won't be displayed.  In either case, the body is evaluated
+as normally, and the return value of the final element in the body is
+the return value of the macro.
+
+The @var{message} element is evaluated before @var{body}, and is
+always evaluated, whether the message is displayed or not.
+@end defmac
+
+@c based on src/eval.c
+@defun funcall-with-delayed-message timeout message function
+Like @code{funcall}, but display @var{message} if @var{function} takes
+longer than @var{timeout}.  @var{timeout} is a number of seconds, and
+can be an integer or a floating point number.
+
+If @var{function} takes less time to execute than @var{timeout}
+seconds, @var{message} is not displayed.
+@end defun
+
+@c copied from lispref/display.texi
 @defun buttonize string callback &optional data help-echo
 Sometimes it's more convenient to make a string into a button without
 inserting it into a buffer immediately, for instance when creating
@@ -2906,9 +2937,6 @@ The function @code{function-documentation}.
 The command @code{string-edit} and @code{read-string-from-buffer}.
 @item
 The macro @code{with-undo-amalgamate}.
-@item
-The macro @code{with-delayed-message} and the function
-@code{funcall-with-delayed-message}.
 @item
 The function @code{string-glyph-split}.
 @item
