@@ -1,5 +1,9 @@
 #+title: compat.el - Changelog
 
+* Development
+
+- compat-29: Add ~funcall-with-delayed-message~ and ~with-delayed-message~.
+
 * Release of "Compat" Version 29.1.3.1
 
 - Fix regression, which prevented loading Compat in interpreted mode. We ensure
